Fix equation whitespace, adjust circlepack margins

--- a/src/Sections.css
+++ b/src/Sections.css
@@ -19,3 +19,7 @@
     display:inline-block;
     line-height:initial;
 }
+
+.katex {
+    white-space: inherit;
+}
